# YES-MY-ROAD

./: README.md  pyproject.toml
APP/: README.md  pubspec.yaml
APP/android/app/: build.gradle.kts
APP/assets/models/: labels.txt
APP/lib/models/: local_detection_record.dart
APP/lib/screens/: home_screen.dart  recording_detection_screen.dart
APP/lib/services/: api_service.dart  local_storage_service.dart  location_service.dart  speed_based_detection_service.dart
APP/lib/utils/: frame_rate_tester.dart  image_converter.dart  screen_utils.dart
APP/lib/widgets/: custom_app_bar.dart
DT/: .gitignore  main.py
DT/road_damage_detection/model/: camera_calibration_result.npy
FE/: .gitignore  .prettierrc  README.md  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts
FE/data/: placeholders.ts
FE/public/: sig_code_coord.csv  전국_시군구_중심점_위도경도.CSV  행정동코드 시군구.xlsx  행정동코드 원본.xlsx
FE/src/api/: api-client.ts  (+6 more)
FE/store/: defect-store.ts
Yes_My_Road/lib/: main.dart
Yes_My_Road/test/: widget_test.dart
ai/camera_calibration/: camera_calibration.py  image_correction.py
ai/geo_image_deduplication/: geo_image_deduplication.ipynb
ai/road_damage_detection/: config.py  damage_detection.py  main.py  road_detection.py  utils.py  visualization.py
api/: .gitignore  README.md  build.gradle
exec/: 프로젝트 계획서.docx
exec/API 명세서/: API명세서.csv
exec/기능명세서/: 기능명세서.csv
image_api/: README.md  build.gradle
reactive/: .env  build.gradle
safeway/lib/: main.dart
templates/: .gitlab-ci.yml  Dockerfile.api  Dockerfile.web
(+290 files in other folders)
